--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-img" src="img/" width="33" height="38" alt="Логотип магазина Кэт энерджи">
+      </a>
+
+      <a class="page-header__logo">
+        <img class="page-header__logo-txt" src="img/" width="101" height="18" alt="Текстовый логотип магазина Кэт энерджи">
+      </a>
+
+      <nav class="main-nav">
+        <button class="main-nav__open" type="button">Открыть меню</button>
+        <button class="main-nav__close visually-hidden" type="button">Закрыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Интернет-магазин Кэт энерджи</h1>
+
+      <section class="intro">
+        <h2 class="intro__title">Функциональное питание для котов</h2>
+        <p class="intro__slogan">Занялся собой? Займись котом!</p>
+        <img class="intro__img" src="img/" alt="Фото еды для котов">
+        <a class="intro__button" href="form.html">Подобрать программу</a>
+      </section>
+
+      <section class="categories">
+        <h2 class="categories__title visually-hidden">Категории</h2>
+        <ul class="categories__list">
+          <li class="categories__item">
+            <h3 class="item__title">Похудение</h3>
+            <p class="item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="item__button" href="#">Каталог Slim</a>
+          </li>
+          <li class="categories__item">
+            <h3 class="item__title">Набор массы</h3>
+            <p class="item__description">Заработать авторитет среди дворовых котов и даже собак?Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="item__button" href="#">Каталог pro</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <img class="advantages__img" src="img/" alt="Логотип элемента">
+            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__img" src="img/" alt="Логотип элемента">
+            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__img" src="img/" alt="Логотип элемента">
+            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__img" src="img/" alt="Логотип элемента">
+            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="example"></section>
+
+      <section class="contacts">
+        <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <a class="contacts__map-open" href="#">
+          <img class="contacts__map" src="img/" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+        </a>
+      </section>
+
+      <footer class="page-footer">
+        <a class="page-footer__logo">
+          <img class="page-footer__logo-txt" src="img/" width="101" height="18" alt="Текстовый логотип магазина Кэт энерджи">
+        </a>
+
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--vk">Мы во Вконтакте</a>
+            <a class="social__link social__link--instagram">Мы в Инстаграме</a>
+            <a class="social__link social__link--facebook">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="#">HTML Academy</a>
+          <img class="copyright__logo" src="img/" alt="Логотип разработчика">
+        </div>
+      </footer>
+
+    </main>
 
   </body>
 </html>
