--- a/source/index.html
+++ b/source/index.html
@@ -91,27 +91,29 @@
           <img class="contacts__map" src="img/" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
         </a>
       </section>
-
-      <footer class="page-footer">
-        <a class="page-footer__logo">
-          <img class="page-footer__logo-txt" src="img/" width="101" height="18" alt="Текстовый логотип магазина Кэт энерджи">
-        </a>
-
-        <ul class="page-footer__social social">
-          <li class="social__item">
-            <a class="social__link social__link--vk">Мы во Вконтакте</a>
-            <a class="social__link social__link--instagram">Мы в Инстаграме</a>
-            <a class="social__link social__link--facebook">Мы в Фейсбуке</a>
-          </li>
-        </ul>
-
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="#">HTML Academy</a>
-          <img class="copyright__logo" src="img/" alt="Логотип разработчика">
-        </div>
-      </footer>
-
     </main>
 
+    <footer class="page-footer">
+      <a class="page-footer__logo">
+        <img class="page-footer__logo-txt" src="img/" width="101" height="18" alt="Текстовый логотип магазина Кэт энерджи">
+      </a>
+
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="#">Мы во Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+        </li>
+      </ul>
+
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__link" href="#">HTML Academy</a>
+        <img class="copyright__logo" src="img/" alt="Логотип разработчика">
+      </div>
+    </footer>
   </body>
 </html>
