--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-img" src="img/" width="33" height="38" alt="Логотип магазина Кэт энерджи">
@@ -20,14 +19,14 @@
         <button class="main-nav__close visually-hidden" type="button">Закрыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="#">Главная</a>
+            <li class="site-list__item site-list__item--current">
+              <a>Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Каталог продукции</a>
+              <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Подбор программы</a>
+              <a href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -35,7 +34,7 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Интернет-магазин Кэт энерджи</h1>
+      <h1 class="visually-hidden">Главная страница Кэт энерджи</h1>
 
       <section class="intro">
         <h2 class="intro__title">Функциональное питание для котов</h2>
@@ -48,14 +47,14 @@
         <h2 class="categories__title visually-hidden">Категории</h2>
         <ul class="categories__list">
           <li class="categories__item">
-            <h3 class="item__title">Похудение</h3>
-            <p class="item__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="item__button" href="#">Каталог Slim</a>
+            <h3 class="categories__title">Похудение</h3>
+            <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="categories__button" href="catalog.html">Каталог Slim</a>
           </li>
           <li class="categories__item">
-            <h3 class="item__title">Набор массы</h3>
-            <p class="item__description">Заработать авторитет среди дворовых котов и даже собак?Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="item__button" href="#">Каталог pro</a>
+            <h3 class="categories__title">Набор массы</h3>
+            <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак?Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="categories__button" href="catalog.html">Каталог pro</a>
           </li>
         </ul>
       </section>
@@ -82,7 +81,10 @@
         </ul>
       </section>
 
-      <section class="example"></section>
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <!-- будет готово позже -->
+      </section>
 
       <section class="contacts">
         <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
@@ -111,8 +113,10 @@
       </ul>
 
       <div class="page-footer__copyright copyright">
-        <a class="copyright__link" href="#">HTML Academy</a>
-        <img class="copyright__logo" src="img/" alt="Логотип разработчика">
+        <p class="copyright__text">HTML Academy</p>
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+          <img class="copyright__logo" src="img/" alt="Логотип разработчика">
+        </a>
       </div>
     </footer>
   </body>
