Завершает разметку index.html

--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,27 @@
 
       <section class="example">
         <h2 class="example__title">Живой пример</h2>
-        <!-- будет готово позже -->
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <div class="example__wrapper">
+          <p class="example__txt">5 кг</p>
+          <p class="example__txt">60 дней</p>
+        </div>
+        <div class="example__photo-before">
+          <img src="img/" alt="Фото кота до программы">
+        </div>
+        <div class="example__photo-after">
+          <img src="img/" alt="Фото кота после программы">
+        </div>
+        <div class="example__contols range-controls">
+          <div class="range-controls__scale">
+            <div class="range-controls__bar"></div>
+          </div>
+          <div class="range-controls__wrapper">
+            <p class="range-controls__txt">Было</p>
+            <div class="range-controls__toggle"></div>
+            <p class="range-controls__txt">Стало</p>
+          </div>
+        </div>
       </section>
 
       <section class="contacts">
