--- a/source/catalog.html
+++ b/source/catalog.html
@@ -183,7 +183,53 @@
 
       <section class="extra">
         <h2 class="extra__title">Дополнительные товары</h2>
-        <!-- будет готово позже -->
+        <ul class="extra__list additional-list">
+          <li class="additional-list__item">
+            <h3 class="additional-list__title">Сахарозаменитель</h3>
+            <table class="additional-list__table">
+              <tr>
+                <td class="additional-list__field">1 упаковка (100 г)</td>
+                <td class="additional-list__value">200 Р.</td>
+              </tr>
+            </table>
+            <a class="additional-list__order-button" href="#">Заказать</a>
+          </li>
+          <li class="additional-list__item">
+            <h3 class="additional-list__title">Питьевая вода</h3>
+            <table class="additional-list__table">
+              <tr>
+                <td class="additional-list__field">5 литров</td>
+                <td class="additional-list__value">50 Р.</td>
+              </tr>
+            </table>
+            <a class="additional-list__order-button" href="#">Заказать</a>
+          </li>
+          <li class="additional-list__item">
+            <h3 class="additional-list__title">Молоко</h3>
+            <table class="additional-list__table">
+              <tr>
+                <td class="additional-list__field">1 литр</td>
+                <td class="additional-list__value">100 Р.</td>
+              </tr>
+            </table>
+            <a class="additional-list__order-button" href="#">Заказать</a>
+          </li>
+          <li class="additional-list__item">
+            <h3 class="additional-list__title">Витамины</h3>
+            <table class="additional-list__table">
+              <tr>
+                <td class="additional-list__field">1 упаковка (30 г)</td>
+                <td class="additional-list__value">300 Р.</td>
+              </tr>
+            </table>
+            <a class="additional-list__order-button" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="stock">
+        <h2 class="stock__title">Акции</h2>
+        <p class="stock__txt">Закажите все и получите чехол для кота в подарок!</p>
       </section>
 
       <section class="contacts">
