--- a/source/index.html
+++ b/source/index.html
@@ -40,11 +40,10 @@
             </g>
             </svg>
           </a>
-          <button class="main-nav__open" type="button">Открыть меню</button>
-          <button class="main-nav__close visually-hidden" type="button">Закрыть меню</button>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-list site-list--index">
           <li class="site-list__item site-list__item--current">
             <a class="site-list__link">Главная</a>
           </li>
@@ -66,7 +65,13 @@
           <h2 class="intro__title">Функциональное питание для котов</h2>
           <p class="intro__slogan">Занялся собой? Займись котом!</p>
         </div>
+        <picture>
+          <source media="(min-width: 708px)" srcset="/img/index-can-tablet@1x.jpg">
+          <source media="(min-width: 1220px)" srcset="/img/index-can-desktop@1x.png">
+          <img class="intro__img" src="/img/index-can-mobile@1x.png">
+        </picture>
         <a class="intro__button" href="form.html">Подобрать программу</a>
+        <div class="intro__desktop-substrate"></div>
       </section>
 
       <section class="categories">
@@ -86,25 +91,27 @@
       </section>
 
       <section class="advantages">
-        <h2 class="advantages__title">Как это работает</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item">
-            <img class="advantages__img" src="img/advantage-leaf@1x.png" width="50" height="50" alt="Логотип элемента">
-            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__img" src="img/advantage-powder@1x.png" width="50" height="50" alt="Логотип элемента">
-            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__img" src="img/advantage-dining@1x.png" width="50" height="50" alt="Логотип элемента">
-            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__img" src="img/advantage-clock@1x.png" width="50" height="50" alt="Логотип элемента">
-            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-          </li>
-        </ul>
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title">Как это работает</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img class="advantages__img" src="img/advantage-leaf@1x.png" width="50" height="50" alt="Логотип элемента">
+              <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__img" src="img/advantage-powder@1x.png" width="50" height="50" alt="Логотип элемента">
+              <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__img" src="img/advantage-dining@1x.png" width="50" height="50" alt="Логотип элемента">
+              <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__img" src="img/advantage-clock@1x.png" width="50" height="50" alt="Логотип элемента">
+              <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="example">
@@ -119,21 +126,32 @@
             <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
           </div>
         </div>
-        <div class="example__toggle-block">
-          <div class="example__photo-before">
-            <img src="img/before-mobile@1x.png" width="311" height="232" alt="Фото кота до программы">
-          </div>
-          <div class="example__photo-after visually-hidden">
-            <img src="img/after-mobile@1x.png" width="251" height="240" alt="Фото кота после программы">
-          </div>
+        <div class="example__toggle-block slider">
+          <input class="slide-1 visually-hidden" type="radio" id="slide-1" name="slide-group" checked>
+          <input class="slide-2 visually-hidden" type="radio" id="slide-2" name="slide-group">
+          <ul class="example__slider-list">
+            <li class="example__slider-item example__photo-before">
+              <picture>
+                <source media="(min-width: 708px)" srcset="img/before-tablet@1x.png">
+                <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png">
+                <img class="example__slider-image example__slider-image--before" src="img/before-mobile@1x.png" alt="Фото кота до программы">
+              </picture>
+            </li>
+            <li class="example__slider-item example__photo-after">
+              <picture>
+                <source media="(min-width: 708px)" srcset="img/after-tablet@1x.png">
+                <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png">
+                <img class="example__slider-image example__slider-image--after" src="img/after-mobile@1x.png" alt="Фото кота после программы">
+              </picture>
+            </li>
+          </ul>
           <div class="example__controls range-controls">
-            <div class="range-controls__scale">
-              <div class="range-controls__bar"></div>
-            </div>
             <div class="range-controls__wrapper">
-              <p class="range-controls__txt">Было</p>
-              <div class="range-controls__toggle"></div>
-              <p class="range-controls__txt">Стало</p>
+              <label class="slide-contols__prev range-controls__txt" for="slide-1">Было</label>
+              <div class="range-controls__toggle">
+                <div class="range-controls__bar"></div>
+              </div>
+              <label class="slide-contols__next range-controls__txt" for="slide-2">Стало</label>
             </div>
           </div>
         </div>
@@ -145,7 +163,11 @@
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <a class="contacts__map-open" href="#">
-          <img class="contacts__map" src="img/bg-map-mobile@1x.png" width="320" height="362" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+          <picture>
+            <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
+            <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
+            <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+          </picture>
         </a>
       </section>
     </main>
@@ -184,13 +206,43 @@
 
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="#">Мы во Вконтакте</a>
+            <a class="social__link social__link--vk" href="#">
+              <span class="visually-hidden">Мы во Вконтакте</span>
+              <svg width="22" height="12" viewBox="0 0 22 12">
+                <g>
+                    <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+                    c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
+                    c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3
+                    c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1
+                    c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
+                    c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/>
+                </g>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">Мы в Инстаграме</a>
+            <a class="social__link social__link--instagram" href="#">
+              <span class="visually-hidden">Мы в Инстаграме</span>
+              <svg width="16" height="16" viewBox="0 0 16.1 16">
+                <g>
+                    <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
+                    <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
+                      s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+                    <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
+                </g>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="#">
+              <span class="visually-hidden">Мы в Фейсбуке</span>
+              <svg width="10" height="19" viewBox="0 0 10 19">
+                <g>
+                    <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+                    h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z"/>
+                </g>
+              </svg>
+            </a>
           </li>
         </ul>
 
@@ -204,5 +256,21 @@
         </div>
       </div>
     </footer>
+    <script>
+        var navMain = document.querySelector('.main-nav');
+        var navButton = document.querySelector('.main-nav__button');
+
+        navMain.classList.remove('main-nav--nojs');
+
+        navButton.addEventListener('click', function() {
+          if (navMain.classList.contains('main-nav--closed')) {
+            navMain.classList.remove('main-nav--closed');
+            navMain.classList.add('main-nav--opened');
+          } else {
+            navMain.classList.add('main-nav--closed');
+            navMain.classList.remove('main-nav--opened');
+          }
+        });
+    </script>
   </body>
 </html>
