--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrap">
-        <a class="page-header__link">
+        <a class="page-header__link" href="index.html">
           <svg class="page-header__logo" viewBox="0 0.002 190.4 37.598">
             <g>
               <path class="page-header__logo--yellow" d="M6.1,20.7l0.1-2.3c6.7-0.9,13.4-1.4,20.2-1.3c0,0.6,0,1.2-0.1,1.8c0,0,2.9-1.3,6-1.8&#10;    c-2.4-6.3-8.5-10.8-15.6-10.8c-8.3,0-15.2,6.1-16.5,14.1C2.4,20.5,6.1,20.7,6.1,20.7z"/>
@@ -18,12 +18,12 @@
               <path class="page-header__logo--yellow" d="M6.4,25.7c0,0-3.8-1.4-5.2-1.8c-0.4-0.1-0.8-0.2-1.2-0.3c0.2,6,3.7,11.3,8.7,14L6.4,25.7z"/>
             </g>
               <path class="page-header__logo--red" d="M26.3,17.1c0.1-8.5-1.4-16.5-1.4-16.5S24.7-0.6,24,0.4c-0.7,1.1-1.2,3.9-1.2,3.9c-7.4-0.4-12.8,0.3-12.8,0.3&#10;  C9.2,2,7.9,0.8,7.2,1C6.5,1.3,6.5,4.4,6.5,4.4L6.1,18.5C12.8,17.5,19.6,17.1,26.3,17.1z"/>
-              <path d="M12.4,14c0-0.1,1,0.7,1.4,0.9c0.4,0.2,0.6,0.4,0.6,0.6c0,0.2-0.3,0.3-0.6,0.3s-0.9-0.1-1-0.3c0,0,0.6,0,0.9,0h0.3&#10;  C14.1,15.6,12.7,14.5,12.4,14z"/>
-              <path d="M19.9,14.1c0,0-1,1.3-1.1,1.3c0,0.1-0.2,0.3,0.2,0.3s1.1-0.2,1.2-0.3c0.1-0.1,0.1-0.2-0.1-0.2c-0.2,0-0.7,0-1,0.1L19.9,14.1&#10;  C19.9,14.1,20,14,19.9,14.1z"/>
-              <path d="M16.8,20.2c0,0,0.8-0.4,1.1-1c0.3-0.7,0-0.9-0.4-1c-0.5-0.1-1.3,0-1.7,0.3c-0.4,0.4-0.3,0.7-0.1,1&#10;  C15.9,19.7,16.5,20.1,16.8,20.2z"/>
+              <path class="page-header__logo--black" d="M12.4,14c0-0.1,1,0.7,1.4,0.9c0.4,0.2,0.6,0.4,0.6,0.6c0,0.2-0.3,0.3-0.6,0.3s-0.9-0.1-1-0.3c0,0,0.6,0,0.9,0h0.3&#10;  C14.1,15.6,12.7,14.5,12.4,14z"/>
+              <path class="page-header__logo--black" d="M19.9,14.1c0,0-1,1.3-1.1,1.3c0,0.1-0.2,0.3,0.2,0.3s1.1-0.2,1.2-0.3c0.1-0.1,0.1-0.2-0.1-0.2c-0.2,0-0.7,0-1,0.1L19.9,14.1&#10;  C19.9,14.1,20,14,19.9,14.1z"/>
+              <path class="page-header__logo--black" d="M16.8,20.2c0,0,0.8-0.4,1.1-1c0.3-0.7,0-0.9-0.4-1c-0.5-0.1-1.3,0-1.7,0.3c-0.4,0.4-0.3,0.7-0.1,1&#10;  C15.9,19.7,16.5,20.1,16.8,20.2z"/>
               <path class="page-header__logo--red" d="M16.3,21.5c0,0-0.2,0.4-0.5,0.6c-0.2,0.2-0.6,0.4-1,0.4c-0.6,0-1.1-0.2-1.5-0.4c-0.2-0.1-0.4-0.3-0.5-0.4&#10;  c-0.2-0.2-0.4-0.3-0.4-0.3s0.7,4.1,2.6,4.7c1.8,0.6,2.1-0.7,2.2-1.1c0-0.3,0-2.1-0.8-3.2C16.5,21.4,16.4,21.6,16.3,21.5z"/>
             <g>
-              <path d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
+              <path class="page-header__logo--black" d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
             </g>
             <path class="page-header__logo--red" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
             <g transform="matrix(1, 0, 0, 1, 90, 10.200001)">
@@ -64,8 +64,8 @@
         <ul class="catalog__list product-list">
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png">
               <img class="product-list__img" src="img/chicken-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
@@ -89,8 +89,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png">
               <img class="product-list__img product-list__img--big" src="img/chicken-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
@@ -114,8 +114,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png">
               <img class="product-list__img" src="img/fish-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
@@ -139,8 +139,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png">
               <img class="product-list__img product-list__img--big" src="img/fish-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
@@ -164,8 +164,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png">
               <img class="product-list__img" src="img/buckwheat-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
@@ -189,8 +189,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png">
               <img class="product-list__img product-list__img--big" src="img/buckwheat-big-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
@@ -214,8 +214,8 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png">
               <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png">
               <img class="product-list__img" src="img/rice-small-mobile@1x.jpg" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
             </picture>
             <div class="product-list__wrapper">
@@ -319,8 +319,8 @@
         </div>
         <a class="contacts__map-open" href="#">
           <picture>
-            <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
             <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
+            <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
             <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
           </picture>
         </a>
@@ -329,7 +329,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrap">
-        <a class="page-footer__link">
+        <a class="page-footer__link" href="index.html">
           <svg class="page-footer__logo" viewBox="0 0 127.8 23.4">
             <g>
               <path
@@ -363,7 +363,7 @@
           <li class="social__item">
             <a class="social__link social__link--vk" href="#">
               <span class="visually-hidden">Мы во Вконтакте</span>
-                <svg width="22" height="12" viewBox="0 0 22 12">
+                <svg class="social__icon" width="22" height="12" viewBox="0 0 22 12">
                   <g>
                     <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
                     c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
@@ -378,7 +378,7 @@
           <li class="social__item">
             <a class="social__link social__link--instagram" href="#">
               <span class="visually-hidden">Мы в Инстаграме</span>
-              <svg width="16" height="16" viewBox="0 0 16.1 16">
+              <svg class="social__icon" width="16" height="16" viewBox="0 0 16.1 16">
                 <g>
                   <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
                   <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
@@ -391,7 +391,7 @@
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
               <span class="visually-hidden">Мы в Фейсбуке</span>
-              <svg width="10" height="19" viewBox="0 0 10 19">
+              <svg class="social__icon" width="10" height="19" viewBox="0 0 10 19">
                 <g>
                   <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
                   h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z"/>
@@ -402,8 +402,8 @@
         </ul>
 
         <div class="page-footer__copyright copyright">
-          <p class="copyright__text">HTML Academy</p>
           <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+            <p class="copyright__text">HTML Academy</p>
             <svg class="copyright__logo" viewBox="0 0 60 60">
               <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
             </svg>
