--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
     <script>
       document.createElement( "picture" );
     </script>
-    <script src="js/picturefill.js" async></script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
   <body>
     <header class="page-header">
