--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,8 +70,12 @@
         <ul class="catalog__list product-list">
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="/img/chicken-small-tablet@1x.png, /img/chicken-small-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
               <img class="product-list__img product-list__img--chicken" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
@@ -95,8 +99,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
               <img class="product-list__img product-list__img--big product-list__img--big-chicken" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
             </picture>
             <div class="product-list__wrapper">
@@ -120,8 +128,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
               <img class="product-list__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
@@ -145,8 +157,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
               <img class="product-list__img product-list__img--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
             </picture>
             <div class="product-list__wrapper">
@@ -170,8 +186,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
               <img class="product-list__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
@@ -195,8 +215,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
               <img class="product-list__img product-list__img--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
             </picture>
             <div class="product-list__wrapper">
@@ -220,8 +244,12 @@
           </li>
           <li class="product-list__item">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
               <img class="product-list__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
             </picture>
             <div class="product-list__wrapper">
@@ -314,8 +342,12 @@
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
-              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
               <img class="contacts__map" width="320" height="362" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
             </picture>
           </a>
