Устраняет замечания валидатора

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,9 +17,9 @@
     <header class="page-header">
       <div class="page-header__wrap">
         <a class="page-header__link" href="index.html">
-          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></svg>
-          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></svg>
-          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></svg>
+          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></use></svg>
+          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></use></svg>
+          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></use></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
@@ -56,7 +56,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">500 г</td>
@@ -85,7 +85,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">1000 г</td>
@@ -114,7 +114,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">500 г</td>
@@ -143,7 +143,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">1000 г</td>
@@ -172,7 +172,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">500 г</td>
@@ -201,7 +201,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">1000 г</td>
@@ -230,7 +230,7 @@
             </picture>
             <div class="product-list__wrapper">
               <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
-              <table class="product-list__table" border="0">
+              <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
                   <td class="product-list__value">500 г</td>
@@ -315,7 +315,7 @@
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__wrap">
-          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
+          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
