--- a/source/index.html
+++ b/source/index.html
@@ -18,9 +18,9 @@
     <header class="page-header">
       <div class="page-header__wrap">
         <a class="page-header__link">
-          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></svg>
-          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></svg>
-          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></svg>
+          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></use></svg>
+          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></use></svg>
+          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></use></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
@@ -53,7 +53,7 @@
 
             <source media="(min-width: 1220px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
             <source media="(min-width: 708px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-            <img class="intro__img" width="280" height="270" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x">
+            <img class="intro__img" width="280" height="270" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Фоновое изображение с котом">
           </picture>
         </div>
         <a class="intro__button" href="form.html">Подобрать программу</a>
@@ -161,7 +161,7 @@
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__wrap">
-          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
+          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
