--- a/source/form.html
+++ b/source/form.html
@@ -17,9 +17,9 @@
     <header class="page-header">
       <div class="page-header__wrap">
         <a class="page-header__link" href="index.html">
-          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></svg>
-          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></svg>
-          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></svg>
+          <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#logo-mobile"></use></svg>
+          <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#logo-tablet"></use></svg>
+          <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#logo-desktop"></use></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
@@ -137,7 +137,7 @@
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <div class="contacts__wrap">
-          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
+          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
           <a class="contacts__map-open" href="map.html">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
