Добавляет метку на карте, переподключает шрифты и корректирует footer, header, extra и programm

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>HTML Academy: Каталог Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
 
@@ -339,21 +338,21 @@
 
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы во Вконтакте</span>
-              <svg class="social__icon" width="22" height="12"><use xlink:href="img/sprite.svg#vk-logo"></use></svg>
+              <svg class="social__icon social__icon--vk" width="22" height="12"><use xlink:href="img/sprite.svg#vk-logo"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы в Инстаграме</span>
-              <svg class="social__icon" width="16" height="16"><use xlink:href="img/sprite.svg#insta-logo"></use></svg>
+              <svg class="social__icon social__icon--instagram" width="16" height="16"><use xlink:href="img/sprite.svg#insta-logo"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы в Фейсбуке</span>
-              <svg class="social__icon" width="10" height="19"><use xlink:href="img/sprite.svg#fb-logo"></use></svg>
+              <svg class="social__icon social__icon--facebook" width="10" height="19"><use xlink:href="img/sprite.svg#fb-logo"></use></svg>
             </a>
           </li>
         </ul>
