--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>HTML Academy: Подбор программы от Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
 
@@ -46,7 +45,7 @@
         <p class="program__description">
           Заполните анкету и мы подберем программу питания для вашего кота
         </p>
-        <form class="program__form" method="get" action="#">
+        <form class="program__form" method="post" action="https://echo.htmlacademy.ru">
 
           <fieldset class="program__section cat-info">
             <legend class="cat-info__title visually-hidden">Анкета</legend>
@@ -161,21 +160,21 @@
 
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы во Вконтакте</span>
-              <svg class="social__icon" width="22" height="12"><use xlink:href="img/sprite.svg#vk-logo"></use></svg>
+              <svg class="social__icon social__icon--vk" width="22" height="12"><use xlink:href="img/sprite.svg#vk-logo"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы в Инстаграме</span>
-              <svg class="social__icon" width="16" height="16"><use xlink:href="img/sprite.svg#insta-logo"></use></svg>
+              <svg class="social__icon social__icon--instagram" width="16" height="16"><use xlink:href="img/sprite.svg#insta-logo"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">
+            <a class="social__link" href="#">
               <span class="visually-hidden">Мы в Фейсбуке</span>
-              <svg class="social__icon" width="10" height="19"><use xlink:href="img/sprite.svg#fb-logo"></use></svg>
+              <svg class="social__icon social__icon--facebook" width="10" height="19"><use xlink:href="img/sprite.svg#fb-logo"></use></svg>
             </a>
           </li>
         </ul>
