Добавляет немножко доступности

--- a/source/index.html
+++ b/source/index.html
@@ -25,16 +25,16 @@
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
-        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__button" type="button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list site-list site-list--index">
           <li class="site-list__item site-list__item--current">
             <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            <a class="site-list__link" href="catalog.html" aria-label="Перейти в Каталог продукции">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
+            <a class="site-list__link" href="form.html" aria-label="Подобрать программу">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -57,7 +57,7 @@
             <img class="intro__img" width="280" height="270" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Фоновое изображение с котом">
           </picture>
         </div>
-        <a class="intro__button" href="form.html">Подобрать программу</a>
+        <a class="intro__button" href="form.html" aria-label="Подобрать программу">Подобрать программу</a>
         <div class="intro__desktop-substrate"></div>
       </section>
 
@@ -67,12 +67,12 @@
           <li class="categories__item">
             <h3 class="categories__title">Похудение</h3>
             <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="categories__button" href="catalog-slim.html">Каталог Slim</a>
+            <a class="categories__button" href="catalog-slim.html" aria-label="Перейти в Каталог Slim">Каталог Slim</a>
           </li>
           <li class="categories__item">
             <h3 class="categories__title">Набор массы</h3>
             <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак?Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="categories__button" href="catalog-pro.html">Каталог pro</a>
+            <a class="categories__button" href="catalog-pro.html" aria-label="Перейти в Каталог Pro">Каталог pro</a>
           </li>
         </ul>
       </section>
@@ -163,7 +163,7 @@
         </div>
         <div class="contacts__wrap">
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
-          <a class="contacts__map-open" href="map.html">
+          <a class="contacts__map-open" href="map.html" aria-label="Открыть карту">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
@@ -202,7 +202,7 @@
           </li>
         </ul>
 
-        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18" aria-label="Перейти на сайт HTML Academy">
           <span class="copyright__text">HTML Academy</span>
           <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
         </a>
