--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,23 +17,23 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrap">
-        <a class="page-header__link" href="index.html">
+        <a class="page-header__link" href="index.html" aria-label="Вернуться на Главную страницу">
           <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#icon-mobile"></use></svg>
           <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#icon-tablet"></use></svg>
           <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#icon-desktop"></use></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
-        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__button" type="button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html" aria-label="Вернуться на Главную страницу">Главная</a>
           </li>
           <li class="site-list__item site-list__item--current">
             <a class="site-list__link">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
+            <a class="site-list__link" href="form.html" aria-label="Подобрать программу">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -46,7 +46,7 @@
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list product-list">
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -58,7 +58,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
               </a>
               <table class="product-list__table">
@@ -76,10 +76,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -91,7 +91,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
               </a>
               <table class="product-list__table">
@@ -109,10 +109,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -124,7 +124,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
               </a>
               <table class="product-list__table">
@@ -142,10 +142,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -157,7 +157,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
               </a>
               <table class="product-list__table">
@@ -175,10 +175,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -190,7 +190,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
               </a>
               <table class="product-list__table">
@@ -208,10 +208,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -223,7 +223,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
               </a>
               <table class="product-list__table">
@@ -241,10 +241,10 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html">
+            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
@@ -256,7 +256,7 @@
               </picture>
             </a>
             <div class="product-list__wrapper">
-              <a class="product-list__link" href="item-page.html">
+              <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
                 <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
               </a>
               <table class="product-list__table">
@@ -274,13 +274,13 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="checkout.html">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item product-list__item--stock">
             <svg class="product-list__logo" width="30" height="30"><use xlink:href="img/sprite.svg#icon-plus-mobile"></use></svg>
             <h3 class="product-list__title">Показать еще 100500 товаров</h3>
             <p class="product-list__description">На самом деле вкусов гораздо больше!</p>
-            <a class="product-list__show-all" href="new-items.html">Показать все</a>
+            <a class="product-list__show-all" href="new-items.html" aria-label="Показать больше товаров">Показать все</a>
           </li>
         </ul>
       </section>
@@ -290,44 +290,52 @@
         <div class="extra__wrapper">
           <ul class="extra__list additional-list">
             <li class="additional-list__item">
-              <h3 class="additional-list__title">Сахарозаменитель</h3>
+              <a class="additional-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+                <h3 class="additional-list__title">Сахарозаменитель</h3>
+              </a>
               <table class="additional-list__table">
                 <tr class="additional-list__row">
                   <td class="additional-list__field">1 упаковка (100 г)</td>
                   <td class="additional-list__value">200 Р.</td>
                 </tr>
               </table>
-              <a class="additional-list__order-button" href="#">Заказать</a>
+              <a class="additional-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
             </li>
             <li class="additional-list__item">
-              <h3 class="additional-list__title">Питьевая вода</h3>
+              <a class="additional-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+                <h3 class="additional-list__title">Питьевая вода</h3>
+              </a>
               <table class="additional-list__table">
                 <tr class="additional-list__row">
                   <td class="additional-list__field">5 литров</td>
                   <td class="additional-list__value">50 Р.</td>
                 </tr>
               </table>
-              <a class="additional-list__order-button" href="#">Заказать</a>
+              <a class="additional-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
             </li>
             <li class="additional-list__item">
-              <h3 class="additional-list__title">Молоко</h3>
+              <a class="additional-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+                <h3 class="additional-list__title">Молоко</h3>
+              </a>
               <table class="additional-list__table">
                 <tr class="additional-list__row">
                   <td class="additional-list__field">1 литр</td>
                   <td class="additional-list__value">100 Р.</td>
                 </tr>
               </table>
-              <a class="additional-list__order-button" href="#">Заказать</a>
+              <a class="additional-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
             </li>
             <li class="additional-list__item">
-              <h3 class="additional-list__title">Витамины</h3>
+              <a class="additional-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+                <h3 class="additional-list__title">Витамины</h3>
+              </a>
               <table class="additional-list__table">
                 <tr class="additional-list__row">
                   <td class="additional-list__field">1 упаковка (30 г)</td>
                   <td class="additional-list__value">300 Р.</td>
                 </tr>
               </table>
-              <a class="additional-list__order-button" href="#">Заказать</a>
+              <a class="additional-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
             </li>
           </ul>
           <div class="extra__stock stock">
@@ -345,7 +353,7 @@
         </div>
         <div class="contacts__wrap">
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
-          <a class="contacts__map-open" href="map.html">
+          <a class="contacts__map-open" href="map.html" aria-label="Открыть карту">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
@@ -362,7 +370,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrap">
-        <a class="page-footer__link" href="index.html">
+        <a class="page-footer__link" href="index.html" aria-label="Вернуться на Главную страницу">
           <svg class="page-footer__logo" width="128" height="24"><use xlink:href="img/sprite.svg#icon-footer"></use></svg>
         </a>
 
@@ -384,7 +392,7 @@
           </li>
         </ul>
 
-        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18" aria-label="Перейти на сайт HTML Academy">
           <span class="copyright__text">HTML Academy</span>
           <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
         </a>
