--- a/source/form.html
+++ b/source/form.html
@@ -18,20 +18,20 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrap">
-        <a class="page-header__link" href="index.html">
+        <a class="page-header__link" href="index.html" aria-label="Вернуться на Главную страницу">
           <svg class="page-header__logo page-header__logo--mobile" viewBox="0 0.002 190.4 37.598"><use xlink:href="img/sprite.svg#icon-mobile"></use></svg>
           <svg class="page-header__logo page-header__logo--tablet" viewBox="0 0 172.3 57.1"><use xlink:href="img/sprite.svg#icon-tablet"></use></svg>
           <svg class="page-header__logo page-header__logo--desktop" viewBox="0 0 202 59.5"><use xlink:href="img/sprite.svg#icon-desktop"></use></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--opened main-nav--nojs">
-        <button class="main-nav__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__button" type="button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html" aria-label="Вернуться на Главную страницу">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            <a class="site-list__link" href="catalog.html" aria-label="Перейти в Каталог продукции">Каталог продукции</a>
           </li>
           <li class="site-list__item site-list__item--current">
             <a class="site-list__link">Подбор программы</a>
@@ -48,7 +48,7 @@
         <p class="program__description">
           Заполните анкету и мы подберем программу питания для вашего кота
         </p>
-        <form class="program__form" method="post" action="https://echo.htmlacademy.ru">
+        <form class="program__form" method="get" action="https://echo.htmlacademy.ru">
 
           <fieldset class="program__section cat-info">
             <legend class="cat-info__title visually-hidden">Анкета</legend>
@@ -56,28 +56,28 @@
               <ul class="cat-info__list">
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-name">Имя:*</label>
-                  <input class="cat-info__input" type="text" id="cat-name" placeholder="Барсик">
+                  <input class="cat-info__input" type="text" id="cat-name" name="cat-name" placeholder="Барсик">
                 </li>
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-weight">Вес (кг):*</label>
-                  <input class="cat-info__input" type="number" id="cat-weight" placeholder="7">
+                  <input class="cat-info__input" type="number" id="cat-weight" name="cat-weight" placeholder="7">
                 </li>
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-age">Возраст (лет):</label>
-                  <input class="cat-info__input" type="number" id="cat-age" placeholder="7">
+                  <input class="cat-info__input" type="number" id="cat-age" name="cat-age" placeholder="7">
                 </li>
               </ul>
               <ul class="cat-info__filter">
                 <li class="cat-info__filter-item">
-                  <input class="cat-info__radio" type="radio" id="losing-weight" value="losing-weight" name="filter-group" checked>
+                  <input class="cat-info__radio" type="radio" id="losing-weight" value="losing-weight" name="program" checked>
                   <label class="cat-info__label cat-info__label--filter" for="losing-weight">Похудение</label>
                 </li>
                 <li class="cat-info__filter-item">
-                  <input class="cat-info__radio" type="radio" id="mass-set" value="mass-set" name="filter-group">
+                  <input class="cat-info__radio" type="radio" id="mass-set" value="mass-set" name="program">
                   <label class="cat-info__label cat-info__label--filter" for="mass-set">Набор массы</label>
                 </li>
                 <li class="cat-info__filter-item">
-                  <input class="cat-info__radio" type="radio" id="recommendation" value="recommendation" name="filter-group">
+                  <input class="cat-info__radio" type="radio" id="recommendation" value="recommendation" name="program">
                   <label class="cat-info__label cat-info__label--filter" for="recommendation">Не знаю (Нужен ваш совет)</label>
                 </li>
               </ul>
@@ -89,12 +89,12 @@
             <ul class="owner-info__list">
               <li class="owner-info__item">
                 <label class="owner-info__label" for="owner-email">E-mail:*</label>
-                <input class="owner-info__input" type="email" id="owner-email" placeholder="kuklachev@gmail.com">
+                <input class="owner-info__input" type="email" id="owner-email" name="email" placeholder="kuklachev@gmail.com">
                 <svg class="owner-info__icon email-icon" width="17" height="13"><use xlink:href="img/sprite.svg#icon-mail"></use></svg>
               </li>
               <li class="owner-info__item">
                 <label class="owner-info__label" for="owner-tel">Телефон:*</label>
-                <input class="owner-info__input" type="tel" id="owner-tel" placeholder="8 (960) 900-60-90" pattern="\8\s?[\(][0-9]{3}[\)]\s?[0-9]{3}[-][0-9]{2}[-][0-9]{2}">
+                <input class="owner-info__input" type="tel" id="owner-tel" name="phone" placeholder="8 (960) 900-60-90" pattern="\8\s?[\(][0-9]{3}[\)]\s?[0-9]{3}[-][0-9]{2}[-][0-9]{2}">
                 <svg class="owner-info__icon phone-icon" width="20" height="20"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
               </li>
             </ul>
@@ -102,7 +102,7 @@
 
           <fieldset class="program__section about-cat">
             <legend class="about-cat__title">Комментарий</legend>
-            <textarea class="about-cat__text" id="about-cat-txt" rows="5" cols="45" placeholder="Расскажите обо всех повадках кота"></textarea>
+            <textarea class="about-cat__text" id="about-cat-txt" name="about-cat" rows="5" cols="45" placeholder="Расскажите обо всех повадках кота"></textarea>
           </fieldset>
 
           <fieldset class="program__section additional-filter">
@@ -126,11 +126,11 @@
               </li>
             </ul>
           </fieldset>
+          <div class="program__other">
+              <button class="program__button" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
+              <p class="program__additional-txt">* — Обязательные поля</p>
+            </div>
         </form>
-        <div class="program__other">
-          <button class="program__button" type="submit">Отправить заявку</button>
-          <p class="program__additional-txt">* — Обязательные поля</p>
-        </div>
       </section>
 
       <section class="contacts contacts--form">
@@ -140,7 +140,7 @@
         </div>
         <div class="contacts__wrap">
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
-          <a class="contacts__map-open" href="map.html">
+          <a class="contacts__map-open" href="map.html" aria-label="Открыть карту">
             <picture>
               <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 708px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
@@ -157,7 +157,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrap">
-        <a class="page-footer__link" href="index.html">
+        <a class="page-footer__link" href="index.html" aria-label="Вернуться на Главную страницу">
           <svg class="page-footer__logo" width="128" height="24"><use xlink:href="img/sprite.svg#icon-footer"></use></svg>
         </a>
 
@@ -179,7 +179,7 @@
           </li>
         </ul>
 
-        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18" aria-label="Перейти на сайт HTML Academy">
           <span class="copyright__text">HTML Academy</span>
           <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
         </a>
