--- a/source/form.html
+++ b/source/form.html
@@ -45,9 +45,7 @@
 
       <section class="program">
         <h2 class="program__title">Подбор программы</h2>
-        <p class="program__description">
-          Заполните анкету и мы подберем программу питания для вашего кота
-        </p>
+        <p class="program__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
         <form class="program__form" method="get" action="https://echo.htmlacademy.ru">
 
           <fieldset class="program__section cat-info">
@@ -56,11 +54,11 @@
               <ul class="cat-info__list">
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-name">Имя:*</label>
-                  <input class="cat-info__input" type="text" id="cat-name" name="cat-name" placeholder="Барсик">
+                  <input class="cat-info__input" type="text" id="cat-name" name="cat-name" placeholder="Барсик"required>
                 </li>
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-weight">Вес (кг):*</label>
-                  <input class="cat-info__input" type="number" id="cat-weight" name="cat-weight" placeholder="7">
+                  <input class="cat-info__input" type="number" id="cat-weight" name="cat-weight" placeholder="7" required>
                 </li>
                 <li class="cat-info__item">
                   <label class="cat-info__label" for="cat-age">Возраст (лет):</label>
@@ -89,12 +87,12 @@
             <ul class="owner-info__list">
               <li class="owner-info__item">
                 <label class="owner-info__label" for="owner-email">E-mail:*</label>
-                <input class="owner-info__input" type="email" id="owner-email" name="email" placeholder="kuklachev@gmail.com">
+                <input class="owner-info__input" type="email" id="owner-email" name="email" placeholder="kuklachev@gmail.com" required>
                 <svg class="owner-info__icon email-icon" width="17" height="13"><use xlink:href="img/sprite.svg#icon-mail"></use></svg>
               </li>
               <li class="owner-info__item">
                 <label class="owner-info__label" for="owner-tel">Телефон:*</label>
-                <input class="owner-info__input" type="tel" id="owner-tel" name="phone" placeholder="8 (960) 900-60-90" pattern="\8\s?[\(][0-9]{3}[\)]\s?[0-9]{3}[-][0-9]{2}[-][0-9]{2}">
+                <input class="owner-info__input" type="tel" id="owner-tel" name="phone" placeholder="8 (960) 900-60-90" pattern="(\+89[0-9]{9}|8[0-9]{10})" required>
                 <svg class="owner-info__icon phone-icon" width="20" height="20"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
               </li>
             </ul>
@@ -136,7 +134,10 @@
       <section class="contacts contacts--form">
         <div class="contacts__wraper">
           <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="contacts__address">
+              <p class="contacts__street">ул. Большая Конюшенная, д. 19/8</p>
+              <p class="contacts__city">Санкт-Петербург</p>
+          </div>
         </div>
         <div class="contacts__wrap">
           <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400"></iframe>
@@ -180,7 +181,7 @@
         </ul>
 
         <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18" aria-label="Перейти на сайт HTML Academy">
-          <span class="copyright__text">HTML Academy</span>
+          <p class="copyright__text">HTML Academy</p>
           <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
         </a>
       </div>
