добавляет svg4everybody

--- a/source/form.html
+++ b/source/form.html
@@ -187,5 +187,7 @@
       </div>
     </footer>
     <script src="js/main-nav.min.js"></script>
+    <script src="js/svg4everybody.min.js"></script>
+    <script>svg4everybody();</script>
   </body>
 </html>
