--- a/source/catalog.html
+++ b/source/catalog.html
@@ -403,5 +403,7 @@
       </div>
     </footer>
     <script src="js/main-nav.min.js"></script>
+    <script src="js/svg4everybody.min.js"></script>
+    <script>svg4everybody();</script>
   </body>
 </html>
