--- a/source/index.html
+++ b/source/index.html
@@ -214,6 +214,7 @@
     </footer>
     <script src="js/main-nav.min.js"></script>
     <script src="js/before-after.min.js"></script>
+    <script src="js/svgxuse.min.js" defer></script>
     <script src="js/svg4everybody.min.js"></script>
     <script>svg4everybody();</script>
   </body>
