Добавляет исправления по критериям Д7, Д17, Д18

--- a/source/index.html
+++ b/source/index.html
@@ -145,11 +145,11 @@
               </ul>
               <div class="example__controls range-controls">
                 <div class="range-controls__wrapper">
-                  <label class="slide-contols__prev range-controls__txt" for="slide-1">Было</label>
+                  <label class="slide-contols__prev range-controls__txt" for="slide-1" tabindex="0">Было</label>
                   <div id="toggle" class="range-controls__toggle">
-                    <div class="range-controls__bar"></div>
+                    <div class="range-controls__bar" tabindex="0" aria-label="Бегунок слайдера"></div>
                   </div>
-                  <label class="slide-contols__next range-controls__txt" for="slide-2">Стало</label>
+                  <label class="slide-contols__next range-controls__txt" for="slide-2" tabindex="0">Стало</label>
                 </div>
               </div>
             </div>
