--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,7 @@
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list product-list">
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -80,7 +80,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -113,7 +113,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -146,7 +146,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -179,7 +179,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -212,7 +212,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -245,7 +245,7 @@
             <a class="product-list__order-button" href="checkout.html" aria-label="Заказать товар">Заказать</a>
           </li>
           <li class="product-list__item">
-            <a class="product-list__link" href="item-page.html" aria-label="Перейти на страницу товара">
+            <a class="product-list__link product-list__link--img" href="item-page.html" aria-label="Перейти на страницу товара">
               <picture>
                 <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
